<resources>
    <string name="app_name" translatable="false"> Focus Joshua </string>

    <string name="mode_focus"> Focus </string>
    <string name="mode_break"> Break </string>
    <string name="mode_long_break"> Long Break </string>

    <string name="timer_label_focus"> %1$s session </string>
    <string name="timer_default_time" translatable="false"> 25:00 </string>

    <string name="sessionsCount"> %1$d sessions completed </string>

    <string name="btn_start"> Start </string>
    <string name="btn_pause"> Pause </string>
    <string name="btn_resume"> Resume </string>

    <string name="quote"> "Concentration is the root of all the higher abilities in man." — Bruce Lee </string>

    <string-array name="motivational_quotes">
        <item>Take a breath... you earned it</item>
        <item>Disconnect for a moment, your brain needs it</item>
        <item>Stretch your legs and drink some water</item>
        <item>Good job, play some music and relax</item>
    </string-array>

    <string name="btn_history"> History </string>
    <string name="btn_preferences"> Preferences </string>

    <string name="title_history"> History </string>

    <string name="history_filter_all"> All </string>
    <string name="history_filter_week"> This week </string>
    <string name="history_filter_today"> Today </string>

    <string name="history_empty_icon" translatable="false">🎯</string>
    <string name="history_empty_title"> No sessions recorded </string>
    <string name="history_empty_desc"> Start your first session! </string>

    <string name="session_count"> %1$d sessions </string>
    <string name="title_preferences">Preferences</string>

    <string name="theme_preference_key" translatable="false">mx.unam.icat.esie.focusmony.THEME_PREFERENCE_KEY</string>
    <string name="lang_preference_key" translatable="false">mx.unam.icat.esie.focusmony.LANG_PREFERENCE_KEY</string>
    <string name="theme_light_id" translatable="false">light</string>
    <string name="theme_dark_id" translatable="false">dark</string>
    <string name="btn_reset">Reset</string>
    <string name="btn_skip">Skip</string>
    <string name="theme_name_light">Light</string>
    <string name="theme_name_dark">Dark</string>
    <string name="pref_category_settings">Settings</string>
    <string name="pref_theme_title">Application Theme</string>
    <string name="pref_theme_summary">Choose between light or dark mode</string>

    <string name="pref_category_language">Language</string>
    <string name="pref_lang_title">Preferred Language</string>
    <string name="pref_lang_summary">Select the interface language</string>
    <string name="dialog_mode_title">Change Mode</string>
    <string name="dialog_mode_message">Are you sure you want to change the mode? The timer will reset.</string>
    <string name="dialog_yes">Yes</string>
    <string name="dialog_cancel">Cancel</string>
    <string name="status_completed">✓ Completed</string>
    <string name="status_interrupted">✕ Interrupted</string>
    <string name="toast_session_finished">Session finished</string>
    <string name="quote_keep_going">Keep it up!</string>

</resources>