<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background_tvgirl"
    android:padding="@dimen/screen_padding_horizontal"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/tvAppTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/app_name"
        android:textColor="@color/white"
        android:textSize="@dimen/app_title_size"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageButton
        android:id="@+id/btnStats"
        android:layout_width="@dimen/btn_secondary_height"
        android:layout_height="@dimen/btn_secondary_height"
        android:src="@android:drawable/ic_menu_agenda"
        android:contentDescription="@string/btn_history"
        app:layout_constraintEnd_toStartOf="@+id/btnSettings"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageButton
        android:id="@+id/btnSettings"
        android:layout_width="@dimen/btn_secondary_height"
        android:layout_height="@dimen/btn_secondary_height"
        android:src="@android:drawable/ic_menu_preferences"
        android:contentDescription="@string/title_preferences"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tvSessionState"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/spacing_xl"
        android:text="@string/mode_focus"
        android:textColor="@color/white"
        android:textSize="@dimen/app_title_size"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvAppTitle" />

    <com.google.android.material.chip.ChipGroup
        android:id="@+id/chipGroupMode"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/spacing_md"
        app:singleSelection="true"
        app:selectionRequired="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvSessionState">

        <com.google.android.material.chip.Chip
            android:id="@+id/chipFocus"
            style="@style/Widget.MaterialComponents.Chip.Choice"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/mode_focus" />

        <com.google.android.material.chip.Chip
            android:id="@+id/chipBreak"
            style="@style/Widget.MaterialComponents.Chip.Choice"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/mode_break" />

        <com.google.android.material.chip.Chip
            android:id="@+id/chipRest"
            style="@style/Widget.MaterialComponents.Chip.Choice"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/mode_long_break" />
    </com.google.android.material.chip.ChipGroup>

    <TextView
        android:id="@+id/tvTimerDisplay"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/spacing_xl"
        android:text="@string/timer_default_time"
        android:textColor="@color/white"
        android:textSize="@dimen/timer_text_size"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/chipGroupMode" />

    <LinearLayout
        android:id="@+id/sessionDotsContainer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/spacing_md"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvTimerDisplay" />

    <TextView
        android:id="@+id/tvSessionsCompleted"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/spacing_sm"
        tools:text="Sesiones completadas: 0/4"
        android:textColor="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/sessionDotsContainer" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnStartStop"
        android:layout_width="@dimen/btn_primary_width"
        android:layout_height="@dimen/btn_primary_height"
        android:layout_marginTop="@dimen/spacing_xl"
        android:text="@string/btn_start"
        app:cornerRadius="@dimen/btn_corner_radius"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvSessionsCompleted" />

    <LinearLayout
        android:id="@+id/llControlesExtra"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/spacing_md"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnStartStop">

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnReset"
            style="@style/Widget.MaterialComponents.Button.TextButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/white"
            android:text="@string/btn_reset" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnSkip"
            style="@style/Widget.MaterialComponents.Button.TextButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/white"
            android:text="@string/btn_skip" />
    </LinearLayout>

    <TextView
        android:id="@+id/tvMotivationalQuote"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/spacing_xl"
        tools:text="Vamos bien"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="@dimen/quote_text_size"
        android:textStyle="italic"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/llControlesExtra" />

</androidx.constraintlayout.widget.ConstraintLayout>